data/derived/fa15/progs/unify/prog2914.ml.out
Characters 73-97:
  digitsOfIntHelper (n/10) :: [n mod 10]
  ^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a list
